разделил шаблоны на чанки базовых элементов

--- a/dveri_migom/Шаблоны/Главная страница.html
+++ b/dveri_migom/Шаблоны/Главная страница.html
@@ -1,32 +1,5 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-US">
-<head>
-
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <meta name="author" content="SemiColonWeb"/>
-
-    <!-- Stylesheets
-    ============================================= -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i"
-          rel="stylesheet" type="text/css"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css"/>
-    <link rel="stylesheet" href="assets/style.css" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/swiper.css" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/dark.css" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/font-icons.css" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/animate.css" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/magnific-popup.css" type="text/css"/>
-
-    <link rel="stylesheet" href="assets/css/responsive.css" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/dm.css" type="text/css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-    <!-- Document Title
-    ============================================= -->
-    <title>Двери мигом | Двери металические и межкомнатные в наличии в Перми </title>
-
-</head>
+[[$head]]
 
 <body class="stretched">
 
@@ -36,46 +9,8 @@
 
     <!-- Header
     ============================================= -->
-    <header id="header" class="transparent-header full-header" data-sticky-class="not-dark">
-
-        <div id="header-wrap">
-
-            <div class="container clearfix">
-
-                <div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
-
-                <!-- Logo
-                ============================================= -->
-                <div id="logo">
-                    <a href="index.php" class="standard-logo" data-dark-logo="assets/images/dm-dark-logo.png"><img
-                            src="assets/images/dm-logo.png" alt="Canvas Logo"></a>
-                    <a href="index.php" class="retina-logo" data-dark-logo="assets/images/dm-dark-logo@2x.png"><img
-                            src="assets/images/dm-logo@2x.png" alt="Canvas Logo"></a>
-                </div><!-- #logo end -->
-
-                <!-- Primary Navigation
-                ============================================= -->
-                <nav id="primary-menu" class="dark">
-                    [[pdoMenu?
-                        &parents=`-1`
-                        &level=`1`
-                        &hereClass=`current`
-                    ]]
-                    <!--<div id="top-search">
-                        <a href="#" id="top-search-trigger"><i class="icon-search3"></i><i class="icon-line-cross"></i></a>
-                    </div>-->
-
-                    <!--<div class="recall-button__container">-->
-                    <div id="top-search">
-                        <a href="#recallMe" data-lightbox="inline" class="button button-border button-rounded recall-button"><i class="icon-phone-sign"></i>Заказать звонок</a>
-                    </div>
-                </nav><!-- #primary-menu end -->
-
-            </div>
-
-        </div>
-
-    </header><!-- #header end -->
+    [[$header]]
+    <!-- #header end -->
 
     <section id="slider" class="slider-element slider-parallax swiper_wrapper full-screen clearfix">
         <div class="slider-parallax-inner">
@@ -205,11 +140,6 @@
     <section id="content">
 
         <!--<div class="modal-on-load" data-target="#recallMe"></div>-->
-
-        <!-- Modal -->
-        <div class="modal1 mfp-hide" id="recallMe">
-            [[$recallFormBlock]]
-        </div>
 
         <div class="content-wrap">
 
@@ -384,115 +314,7 @@
 
     <!-- Footer
     ============================================= -->
-    <footer id="footer" class="dark">
-
-        <div class="container">
-
-            <div class="footer-widgets-wrap clearfix">
-
-                <div class="col_full">
-                <!--<div class="col_two_third">-->
-                    <div class="col_one_third">
-                        <div class="widget clearfix">
-                            <img src="assets/images/dm-footer-logo.png" alt="" class="footer-logo">
-                            <span>Двери мигом &copy; 2010 - <span id="curYear"></span></span>
-                        </div>
-                    </div>
-
-                    <div class="col_one_third">
-
-                        <address>
-                            <strong>Адрес:</strong><br>
-                            <span>Ул. Героев Хасана, 56 — 2-й этаж</span><br>
-                            <span>время работы: с 9-00 до 18-00</span>
-                        </address>
-
-                    </div>
-
-                    <div class="col_one_third col_last">
-
-                        <strong>Телефон: </strong><a href="tel:+73422073230" class=""><span itemprop="telephone">+7 342 207-32-30</span></a><br>
-                        <strong>E-mail: </strong><a href="mailto:contact@pavdoors.ru" class=""><span itemprop="email">contact@pavdoors.ru</span></a><br>
-                        <strong>Viber: </strong><a title="Viber" href="viber://add?number=+79223334354"><span>+7 922 333-43-54</span></a>
-
-                    </div>
-
-                </div>
-
-
-
-
-            </div><!-- .footer-widgets-wrap end -->
-
-        </div>
-
-        <!-- Copyrights
-        ============================================= -->
-        <!--<div id="copyrights">
-
-            <div class="container clearfix">
-
-                <div class="col_half">
-                     Двери мигом &copy; 2010 - <span id="curYear"></span> <br>
-
-                    &lt;!&ndash;<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>&ndash;&gt;
-                </div>
-
-                &lt;!&ndash;<div class="col_half col_last tright">
-                    <div class="fright clearfix">
-                        <a href="#" class="social-icon si-small si-borderless si-facebook">
-                            <i class="icon-facebook"></i>
-                            <i class="icon-facebook"></i>
-                        </a>
-
-                        <a href="#" class="social-icon si-small si-borderless si-twitter">
-                            <i class="icon-twitter"></i>
-                            <i class="icon-twitter"></i>
-                        </a>
-
-                        <a href="#" class="social-icon si-small si-borderless si-gplus">
-                            <i class="icon-gplus"></i>
-                            <i class="icon-gplus"></i>
-                        </a>
-
-                        <a href="#" class="social-icon si-small si-borderless si-pinterest">
-                            <i class="icon-pinterest"></i>
-                            <i class="icon-pinterest"></i>
-                        </a>
-
-                        <a href="#" class="social-icon si-small si-borderless si-vimeo">
-                            <i class="icon-vimeo"></i>
-                            <i class="icon-vimeo"></i>
-                        </a>
-
-                        <a href="#" class="social-icon si-small si-borderless si-github">
-                            <i class="icon-github"></i>
-                            <i class="icon-github"></i>
-                        </a>
-
-                        <a href="#" class="social-icon si-small si-borderless si-yahoo">
-                            <i class="icon-yahoo"></i>
-                            <i class="icon-yahoo"></i>
-                        </a>
-
-                        <a href="#" class="social-icon si-small si-borderless si-linkedin">
-                            <i class="icon-linkedin"></i>
-                            <i class="icon-linkedin"></i>
-                        </a>
-                    </div>
-
-                    <div class="clear"></div>
-
-                    <i class="icon-envelope2"></i> info@canvas.com <span class="middot">&middot;</span> <i
-                        class="icon-headphones"></i> +91-11-6541-6369 <span class="middot">&middot;</span> <i
-                        class="icon-skype2"></i> CanvasOnSkype
-                </div>&ndash;&gt;
-
-            </div>
-
-        </div>--><!-- #copyrights end -->
-
-    </footer><!-- #footer end -->
+    [[$footer]]<!-- #footer end -->
 
 </div><!-- #wrapper end -->
 
@@ -500,18 +322,7 @@
 ============================================= -->
 <div id="gotoTop" class="icon-angle-up"></div>
 
-<!-- External JavaScripts
-============================================= -->
-<script src="assets/js/jquery.js"></script>
-<script>
-    var curDate = new Date().getFullYear();
-    document.getElementById('curYear').innerHTML = curDate.toString();
-</script>
-<script src="assets/js/plugins.js"></script>
-
-<!-- Footer Scripts
-============================================= -->
-<script src="assets/js/functions.js"></script>
+[[$JSScripts]]
 
 </body>
 </html>
