--- a/dveri_migom/Базовые элементы страницы/head.html
+++ b/dveri_migom/Базовые элементы страницы/head.html
@@ -3,8 +3,7 @@
 <head>
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <meta name="author" content="SemiColonWeb"/>
-    <base href="/dm/">
+    <base href="[[!++site_url]]">
 
     <!-- Stylesheets
     ============================================= -->
