реализовал шаблон с галереей

--- a/dveri_migom/Базовые элементы страницы/lightHeader.html
+++ b/dveri_migom/Базовые элементы страницы/lightHeader.html
@@ -1,4 +1,4 @@
-<header id="header" class="transparent-header full-header" data-sticky-class="not-dark">
+<header id="header" class="transparent-header semi-transparent full-header " data-sticky-class="not-dark">
 
     <div id="header-wrap">
 
@@ -19,9 +19,9 @@
             ============================================= -->
             <nav id="primary-menu" class="dark">
                 [[pdoMenu?
-                    &parents=`-1`
-                    &level=`1`
-                    &hereClass=`current`
+                &parents=`-1`
+                &level=`1`
+                &hereClass=`current`
                 ]]
 
                 [[$recallButtonBlock]]
