--- a/dveri_migom/Шаблоны/Список коллекций.html
+++ b/dveri_migom/Шаблоны/Список коллекций.html
@@ -12,18 +12,27 @@
     <!-- Header
     ============================================= -->
 
-    [[$header]]<!-- #header end -->
+    [[$lightHeader]]<!-- #header end -->
 
     <!-- Page Title
     ============================================= -->
-    <section id="page-title">
+    <section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('assets/images/parallax/7.jpg'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
+
+        <div class="container clearfix white-bg">
+            <h1>Коллекции Questdoors</h1>
+            <span>Выбирайте из коллекции наиболее подходящей вашему интерьеру</span>
+        </div>
+
+    </section>
+
+    <!--<section id="page-title">
 
         <div class="container clearfix">
             <h1>Коллекции Questdoors</h1>
             <span>Выбирайте из коллекции наиболее подходящей вашему интерьеру</span>
         </div>
 
-    </section><!-- #page-title end -->
+    </section>--><!-- #page-title end -->
 
     <!-- Content
     ============================================= -->
