--- a/dveri_migom/Базовые элементы страницы/footer.html
+++ b/dveri_migom/Базовые элементы страницы/footer.html
@@ -2,22 +2,22 @@
 
     <div class="container">
 
-        <div class="footer-widgets-wrap clearfix">
+        <div class="footer-widgets-wrap clearfix dm-widgets-wrap">
 
             <div class="col_full">
                 <!--<div class="col_two_third">-->
                 <div class="col_one_third">
                     <div class="widget clearfix">
-                        <img src="assets/images/dm-footer-logo.png" alt="" class="footer-logo">
+                        <img src="assets/images/dm-footer-logo.png" alt="" class="footer-logo dm-footer">
                         <span>Двери мигом &copy; 2010 - <span id="curYear"></span></span>
                     </div>
                 </div>
 
                 <div class="col_one_third">
 
+                    <h4>Адрес</h4>
                     <address>
-                        <strong>Адрес:</strong><br>
-                        <span>Ул. Героев Хасана, 56 — 2-й этаж</span><br>
+                        <span>г. Пермь, ул. Героев Хасана, 56 — 2-й этаж</span><br>
                         <span>время работы: с 9-00 до 18-00</span>
                     </address>
 
@@ -25,9 +25,10 @@
 
                 <div class="col_one_third col_last">
 
+                    <h4>Контакты</h4>
                     <strong>Телефон: </strong><a href="tel:+73422073230" class=""><span itemprop="telephone">+7 342 207-32-30</span></a><br>
                     <strong>E-mail: </strong><a href="mailto:contact@pavdoors.ru" class=""><span itemprop="email">contact@pavdoors.ru</span></a><br>
-                    <strong>Viber: </strong><a title="Viber" href="viber://add?number=+79223334354"><span>+7 922 333-43-54</span></a>
+                    <strong>Viber: </strong><a title="Viber" href="viber://chat?number=79223334354"><span>+7 922 333-43-54</span></a>
 
                 </div>
 
