--- a/dveri_migom/Базовые элементы страницы/header.html
+++ b/dveri_migom/Базовые элементы страницы/header.html
@@ -17,14 +17,15 @@
 
             <!-- Primary Navigation
             ============================================= -->
-            <nav id="primary-menu" class="dark">
-                [[pdoMenu?
+            <nav id="primary-menu" class="dark dm-primary-menu">
+
+                    [[pdoMenu?
                     &parents=`-1`
                     &level=`1`
                     &hereClass=`current`
-                ]]
+                    ]]
 
-                [[$recallButtonBlock]]
+                    [[$recallButtonBlock]]
 
             </nav><!-- #primary-menu end -->
 
