--- a/dveri_migom/Базовые элементы страницы/lightHeader.html
+++ b/dveri_migom/Базовые элементы страницы/lightHeader.html
@@ -17,7 +17,7 @@
 
             <!-- Primary Navigation
             ============================================= -->
-            <nav id="primary-menu" class="dark">
+            <nav id="primary-menu" class="dark dm-primary-menu">
                 [[pdoMenu?
                 &parents=`-1`
                 &level=`1`
