--- a/dveri_migom/Шаблоны/Главная страница.html
+++ b/dveri_migom/Шаблоны/Главная страница.html
@@ -271,7 +271,7 @@
 
             <div class="clear"></div>
 
-            <a href="portfolio.html" class="button button-full button-dark center tright bottommargin-lg">
+            <a href="[[~3]]" class="button button-full button-dark center tright bottommargin-lg">
                 <div class="container clearfix">
                     Более 1000 дверей в наличии <strong>Смотреть каталог</strong> <i
                         class="icon-caret-right" style="top:4px;"></i>
