--- a/dveri_migom/Шаблоны/Список коллекций.html
+++ b/dveri_migom/Шаблоны/Список коллекций.html
@@ -19,8 +19,8 @@
     <section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('assets/images/parallax/7.jpg'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
 
         <div class="container clearfix white-bg">
-            <h1>Коллекции Questdoors</h1>
-            <span>Выбирайте из коллекции наиболее подходящей вашему интерьеру</span>
+            <h1>Коллекции [[*pagetitle]]</h1>
+            <span>[[*description]]</span>
         </div>
 
     </section>
@@ -51,6 +51,7 @@
                         &depth=`0`
                         &tpl=`collectionItemTpl`
                         &includeTVs=`collectionImage`
+                        &limit=`50`
                     ]]
 
 
