--- a/dveri_migom/Базовые элементы страницы/head.html
+++ b/dveri_migom/Базовые элементы страницы/head.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="assets/css/responsive.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/dm.css" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
     <!-- Document Title
     ============================================= -->
